# folder_sync

./: .buildinfo  LICENSE  README.md  author.html  changelog.html  description.html  features.html  folder_sync.html  gen-docs.sh  genindex.html  improvements.html  index.html  installation.html  modules.html  objects.inv  overview.html  prerequisites.html  py-modindex.html  pyproject.toml  removal.html  requirements.txt  search.html  searchindex.js  setup.sh  sphinx-quickstart.conf
.github/workflows/: gen-docs.yml  gen-tests.yml
_modules/: dir_monitor.html  index.html  log_recorder.html  vol_manager.html
_modules/folder_sync/: dir_monitor.html  log_recorder.html  vol_manager.html
_sources/: author.md.txt  changelog.md.txt  features.md.txt  folder_sync.rst.txt  improvements.md.txt  index.rst.txt  installation.md.txt  modules.rst.txt  overview.md.txt  prerequisites.md.txt
_sources/modules/: vol_manager.rst.txt
docs/source/: conf.py  description.md  improvements.md  modules.rst  prerequisites.md  removal.md
docs/source/modules/: dir_monitor.rst  log_recorder.rst
modules/: dir_monitor.html  log_recorder.html  vol_manager.html
src/folder_sync/: dir_monitor.py  log_recorder.py  main.py  vol_manager.py
tests/: conftest.py
tests/integration/: usr_sim.py
tests/setup_teardown/: folder_setup.py  folder_teardown.py
tests/unit/: test_vol_manager.py
