[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "folder_sync"
version = "0.1.0"
authors = [
  { name = "Robinson Pompeu", email = "robinson.pompeu@gmail.com" },
]
description = "Folder Monitoring and Synchronization"
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Operating System :: POSIX :: Linux",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/robinsonpompeu/folder_sync"
Documentation = "https://robinsonpompeu.github.io/folder_sync/index.html"
Issues = "https://github.com/robinsonpompeu/folder_sync/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/folder_sync"]

[tool.pytest.ini_options]
pythonpath = "src/folder_sync"